<resources>
	<string name="app_name">Pokedex</string>
	<string name="venha_conhecer_orlando">Venha conhecer Orlando!!! Venha conhecer Orlando!!! Venha conhecer Orlando!!! Venha conhecer Orlando!!! Venha conhecer Orlando!!! Venha conhecer Orlando!!! Venha conhecer Orlando!!!</string>
	<string name="pokemon_type_sample">Eletric</string>
	<string name="title_orlando_example">Orlando</string>
	<string name="entity_imageview_transition_name">entity_imageview_transition</string>

	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="comprar">Comprar</string>
	<string name="pokemon_name">Pokemon name: %s</string>
	<string name="abilities_title">Abilities</string>
	<string name="base_stats_title">Base Stats</string>
	<string name="hp_title">HP</string>
	<string name="attack_title">Attack</string>
	<string name="defence_title">Defence</string>
	<string name="special_attack_title">Special Attack</string>
	<string name="special_defense_title">Special Defense</string>
	<string name="speed_title">Speed</string>
	<string name="total_title">Total</string>
    <string name="pokemon_search_hint">Pesquisar um pokemon</string>
</resources>
